--- a/package.json
+++ b/package.json
@@ -24,31 +24,26 @@
   },
   "version": "1.0.1",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@themesberg/react-bootstrap": "^1.4.1",
-    "bootstrap": "5.0.0-beta1",
-    "chartist": "^0.11.4",
-    "chartist-plugin-tooltips-updated": "^0.1.4",
-    "moment-timezone": "^0.5.31",
-    "react": "^16.13.1",
-    "react-chartist": "^0.14.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.7",
+    "chartist": "^1.4.0",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
-    "react-dom": "^16.13.1",
-    "react-github-btn": "^1.2.0",
-    "react-live": "^2.2.3",
-    "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.3.1",
-    "react-scripts": "3.4.3",
+    "react-dom": "^18.3.1",
+    "react-github-btn": "^1.4.0",
+    "react-live": "^4.1.8",
+    "react-router": "^7.6.3",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.50.0",
+    "sass": "^1.89.2",
     "simplebar-react": "^2.3.0"
   },
   "scripts": {
